- Added support for EDN as an output forat. - Fixed XML serialization of dates/date-times. - Added support for Java 111.1 - Upgraded all dependencies.